fix table wrapping

--- a/app/assets/stylesheets/user_mailer.scss
+++ b/app/assets/stylesheets/user_mailer.scss
@@ -118,6 +118,7 @@ table.submission {
     padding-top: 6px;
     padding-bottom: 6px;
     padding-left: 10px;
+    padding-right: 10px;
     a {
       font-weight: lighter;
       text-decoration: none;
